--- a/README.Rmd
+++ b/README.Rmd
@@ -30,27 +30,21 @@ Por ahora no hay una versión del paquete remitida a [CRAN](https://CRAN.R-proje
 # install.packages("devtools")
 devtools::install_github("PabloGarciaPascual/Unidades_y_constantes")
 ```
-## Example
+## Ejemplos
 
-This is a basic example which shows you how to solve a common problem:
+Para utilizar las constantes se carga el paquete y se escribe la variable deseada:
 
 ```{r example}
 library(constantes)
-## basic example code
+## Pasar de grados celsius a grados Farenheit
+CaF.(25)
+
+
+
 ```
 
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
 
-```{r cars}
-summary(cars)
-```
 
 You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this. You could also use GitHub Actions to re-render `README.Rmd` every time you push. An example workflow can be found here: <https://github.com/r-lib/actions/tree/master/examples>.
 
-You can also embed plots, for example:
 
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
